Add job to generate an image list for docs
With Heat now available we need a way to automate the list of available
images projects can use in their jobs in the docs. This creates a job
that will pull from openstack a list of available public images and
pushes a patch automatically to Gerrit to update the relevant
documentation page. The script will automatically detect if an unmerged
image update patch already exists and update existing patch if available
otherwise create a new one.

Change-Id: If5ea2c53b21b06ab1ed5d6c9c17f30356a930dc4
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -8,7 +8,9 @@
         - 'builder-check-poms'
         - 'builder-verify-packer'
         - 'builder-merge-packer-{platforms}-{templates}'
+        # OpenStack Related
         - 'builder-delete-stale-stacks'
+        - 'builder-update-image-list'
 
     platforms:
         - centos
@@ -312,6 +314,33 @@
 
     builders:
         - shell: !include-raw-escape: opendaylight-infra-cleanup-stale-stacks.sh
+
+    publishers:
+        - email-notification:
+            email-recipients: '{email-recipients}'
+            email-prefix: '[releng]'
+        - opendaylight-infra-shiplogs:
+            maven-version: 'mvn33'
+
+- job-template:
+    name: 'builder-update-image-list'
+    project-type: freestyle
+    node: centos7-java-builder-2c-4g
+
+    properties:
+        - opendaylight-infra-properties:
+            build-days-to-keep: 7
+
+    wrappers:
+        - opendaylight-infra-wrappers:
+            build-timeout: '{build-timeout}'
+
+    triggers:
+        # Update image list every Monday to Friday at 11:00 UTC
+        - timed: '0 11 * * 1-5'
+
+    builders:
+        - shell: !include-raw-escape: opendaylight-infra-update-image-list.sh
 
     publishers:
         - email-notification:
