refactor packer var files to extend the use for different envs
Change-Id: Icdb55915b9ce99f1b4d5e3c27a67ca523feb20ef
Signed-off-by: Guy Belotzerkovsky <guy@hpe.com>

--- a/packer/vars/cloud-env.json.example
+++ b/packer/vars/cloud-env.json.example
@@ -4,11 +4,12 @@
   "public_tenant": "TENNANTID",
   "public_user": "USERID",
   "public_pass": "USERPASS",
-
+  "public_network" : "LOCAL_NET_ID",
 
   "private_auth_url": "https://privapi.opendaylight.org:5000/v2.0",
 
   "private_tenant": "TENNANTID",
   "private_user": "USERID",
-  "private_pass": "USERPASS"
+  "private_pass": "USERPASS",
+  "private_network" : "LOCAL_NET_ID"
 }
