--- a/packer/vars/cloud-env.json.example
+++ b/packer/vars/cloud-env.json.example
@@ -4,11 +4,12 @@
   "public_tenant": "TENNANTID",
   "public_user": "USERID",
   "public_pass": "USERPASS",
-
+  "public_network": "cac67a72-aefc-48f8-ae55-9affa3540dd0",
 
   "private_auth_url": "https://privapi.opendaylight.org:5000/v2.0",
 
   "private_tenant": "TENNANTID",
   "private_user": "USERID",
-  "private_pass": "USERPASS"
+  "private_pass": "USERPASS",
+  "private_network": "6bd0cc77-9896-4fba-a663-88c1a4bbd9a2"
 }
