fix packer jobs syntax
Change-Id: I1a00700bbdf88c698a881f573f891c263f0b4a5c
Signed-off-by: Guy Belotzerkovsky <guy@hpe.com>

--- a/jjb/releng-macros.yaml
+++ b/jjb/releng-macros.yaml
@@ -439,10 +439,10 @@
             templates="../packer/templates/*"
             provision="../packer/provision/*.sh"
             for v in $varfiles; do
-                [[ "${{v##*/}}" =~ ^(cloud-env.*)$ ]] && continue
+                [[ "${v##*/}" =~ ^(cloud-env.*)$ ]] && continue
                 for t in $templates; do
                     export PACKER_LOG="yes" && \
-                    export PACKER_LOG_PATH="packer-validate-${{v##*/}}-${{t##*/}}.log" && \
+                    export PACKER_LOG_PATH="packer-validate-${v##*/}-${t##*/}.log" && \
                                 packer.io validate -var-file=$CLOUDENV \
                                 -var-file=$v $t
                     if [ $? -ne 0 ]; then
@@ -451,7 +451,7 @@
                 done
             done
             for p in $provision; do
-                /bin/bash -n $p > provision-validate-${{p##*/}}.log 2>&1
+                /bin/bash -n $p > provision-validate-${p##*/}.log 2>&1
             done
 
 - builder:
