Reduce verbosity of shiplogs
The end of a build there's a lot of download details from wget and unzip
commands. This patch aims to reduce that unnecessary verbosity. We will
still get error messages / success messages just not the download
status of wget.

Change-Id: I10b9cffc6b74abc6fe2dd7f90924498b9f99197f
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/releng-macros.yaml
+++ b/jjb/releng-macros.yaml
@@ -289,7 +289,10 @@
                 - maven-target:
                         maven-version: '{maven-version}'
                         pom: '.archives/deploy-archives.xml'
-                        goals: 'clean deploy -V -B -q -Dmaven.repo.local=/tmp/r'
+                        goals: >
+                            clean deploy -V -B -q
+                            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+                            -Dmaven.repo.local=/tmp/r
                         settings: 'jenkins-log-archives-settings'
                         settings-type: cfp
                         global-settings: 'odl-global-settings'
