Make stream for CSIT verify configurable
Change-Id: I48ed352fbe6937fb9f675298741f9b037e01b3d9
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -1,6 +1,6 @@
 # Job templates in this file (please update with every new template):
+# FIXME: Update
 #
-# New (for Be release):
 # {project}-csit-verify-1node-{functionality}
 # {project}-csit-1node-{functionality}-{install}-{stream}
 # {project}-csit-1node-periodic-{functionality}-{install}-{stream}
@@ -9,6 +9,7 @@
 # {project}-csit-3node-periodic-{functionality}-{install}-{stream}
 #
 # Parameters:
+# FIXME: Distinguish variables, macros and arguments, then update.
 #
 # opendaylight-infra-parameters: main project integration/test ($PROJECT)
 # jre: (openjdk7 or openjdk8) Java runtime environment to use when launching ODL
@@ -42,9 +43,9 @@
             refspec: 'refs/heads/{branch}'
             artifacts: '{archive-artifacts}'
         - integration-branch:
-            branch: 'stable/boron'
+            branch: '{verify-branch}'
         - integration-distribution-stream:
-            stream: 'boron'
+            stream: '{verify-stream}'
         - integration-bundleurl:
             bundleurl: '{bundleurl}'
         - integration-controller-scope:
@@ -54,11 +55,11 @@
         - integration-test-options:
             test-options: '{robot-options}'
         - integration-stream-test-plan:
-            stream-test-plan: '{project}-{functionality}-boron.txt'
+            stream-test-plan: '{project}-{functionality}-{verify-stream}.txt'
         - integration-test-plan:
             test-plan: '{project}-{functionality}.txt'
         - integration-jdk-version:
-            jdkversion: 'openjdk8'
+            jdkversion: '{verify-jdkversion}'
 
     scm:
         - integration-gerrit-scm:
@@ -452,9 +453,9 @@
             refspec: 'refs/heads/{branch}'
             artifacts: '{archive-artifacts}'
         - integration-branch:
-            branch: 'stable/boron'
+            branch: '{verify-branch}'
         - integration-distribution-stream:
-            stream: 'boron'
+            stream: '{verify-stream}'
         - integration-bundleurl:
             bundleurl: '{bundleurl}'
         - integration-controller-scope:
@@ -464,11 +465,11 @@
         - integration-test-options:
             test-options: '{robot-options}'
         - integration-stream-test-plan:
-            stream-test-plan: '{project}-{functionality}-boron.txt'
+            stream-test-plan: '{project}-{functionality}-{verify-stream}.txt'
         - integration-test-plan:
             test-plan: '{project}-{functionality}.txt'
         - integration-jdk-version:
-            jdkversion: 'openjdk8'
+            jdkversion: '{verify-jdkversion}'
 
     scm:
         - integration-gerrit-scm:
