Override csit verify stream for Iotdm
Change-Id: Ia632b3d3e649e56cb634b4f8318365c05644fe15
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/jjb/iotdm/iotdm-csit-basic.yaml
+++ b/jjb/iotdm/iotdm-csit-basic.yaml
@@ -20,6 +20,11 @@
             branch: 'master'
             jre: 'openjdk8'
 
+    verify-stream: 'carbon'
+    # TODO: Remove when carbon becomes the default scit-verify stream.
+    verify-branch: 'master'
+    # TODO: Update when stable/carbos is created.
+
     install:
         - only:
             scope: 'only'
