--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -382,7 +382,9 @@
 
     scm:
         - gerrit-trigger-scm:
-            refspec: ''
+            refspec: '$GERRIT_REFSPEC'
+            branches:
+                - '$GERRIT_BRANCH'
             choosing-strategy: 'default'
 
     wrappers:
@@ -408,7 +410,6 @@
                       pattern: 'packer/**'
 
     builders:
-        - packer-validate:
         - packer-build:
             platform: '{platforms}'
             template: '{templates}'
