Enable merge job to build image relevant to change
* remove packer-validate builder for the merge job, since
  verify already does the validation for the changes

Change-Id: I719d0b98dd9893948c25a1e56fe59b290fcee950
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -382,7 +382,9 @@
 
     scm:
         - gerrit-trigger-scm:
-            refspec: ''
+            refspec: '$GERRIT_REFSPEC'
+            branches:
+                - '$GERRIT_BRANCH'
             choosing-strategy: 'default'
 
     wrappers:
