--- a/jjb/releng-macros.yaml
+++ b/jjb/releng-macros.yaml
@@ -283,7 +283,10 @@
                 - shell: |
                     if [ -d "$WORKSPACE/.venv-openstack" ]; then
                         source $WORKSPACE/.venv-openstack/bin/activate
-                        openstack --os-cloud rackspace stack delete --yes $STACK_NAME
+                        OS_STATUS=`openstack --os-cloud rackspace stack show -f json -c stack_status $STACK_NAME | jq -r '.stack_status'`
+                        if [ "$OS_STATUS" == "CREATE_COMPLETE" ] && [ "$OS_STATUS" == "CREATE_FAILED" ]; then
+                            openstack --os-cloud rackspace stack delete --yes $STACK_NAME
+                        fi
                     fi
                 - shell: !include-raw: include-raw-deploy-archives.sh
                 - maven-target:
