--- a/jjb/releng-macros.yaml
+++ b/jjb/releng-macros.yaml
@@ -280,15 +280,7 @@
     publishers:
         - postbuildscript:
             builders:
-                - shell: |
-                    if [ -d "$WORKSPACE/.venv-openstack" ]; then
-                        source $WORKSPACE/.venv-openstack/bin/activate
-                        OS_STATUS=`openstack --os-cloud rackspace stack show -f json -c stack_status $STACK_NAME | jq -r '.stack_status'`
-                        if [ "$OS_STATUS" == "CREATE_COMPLETE" ] || [ "$OS_STATUS" == "CREATE_FAILED" ]; then
-                            echo "Deleting $STACK_NAME"
-                            openstack --os-cloud rackspace stack delete --yes $STACK_NAME
-                        fi
-                    fi
+                - shell: !include-raw: include-raw-stack-delete.sh
                 - shell: !include-raw: include-raw-deploy-archives.sh
                 - maven-target:
                         maven-version: '{maven-version}'
