Change iotdm-csit-basic to install odl-onem2mall-iotdm
Install odl-onem2mall-iotdm feature instead of odl-iotdm-onem2m.
Feature odl-onem2mall-iotdm includes all features implemented
in iotdm.

Change-Id: I528d494ff2b6a4d744a91ff9e6e4354f0a7bb52d
Signed-off-by: Tomas Janciga <tjanciga@cisco.com>

--- a/jjb/iotdm/iotdm-csit-basic.yaml
+++ b/jjb/iotdm/iotdm-csit-basic.yaml
@@ -33,7 +33,7 @@
             scope: 'all'
 
     # Features to install
-    install-features: 'odl-iotdm-onem2m'
+    install-features: 'odl-onem2mall-iotdm'
 
     # Robot custom options
     robot-options: ''
