Make distribution test run daily. This is to be merge after we remove csit triggered after merge.
Change-Id: Ic30beb0e32cab9f47733ceb8b18f078374ba32a0
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/jjb/integration/integration-test-jobs.yaml
+++ b/jjb/integration/integration-test-jobs.yaml
@@ -295,7 +295,7 @@
             jdkversion: '{jre}'
 
     triggers:
-        - timed: 'H H * * 6'
+        - timed: 'H H * * *'
 
     builders:
         - trigger-builds:
