Add a macro opendaylight-infra-push-gerrit-patch
This macro allows projects to push an automated patch to their project
repo via Jenkins.

This script requires the following JJB variables to be passed in:
     {project}       Gerrit project-name
     {gerrit-topic}  Gerrit topic, please make a unique topic.
     {gerrit-commit-message}  Commit message to assign to commit.

Change-Id: I97a4eea5196ee512e33ee17cfe24307c04704ec9
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -352,6 +352,10 @@
 
     builders:
         - shell: !include-raw-escape: opendaylight-infra-update-image-list.sh
+        - opendaylight-infra-push-gerrit-patch:
+            project: '{project}'
+            gerrit-topic: 'releng-update-cloud-image-list'
+            gerrit-commit-message: 'Update cloud image list docs'
 
     publishers:
         - email-notification:
