WIP: Do daily=sanity/weekly=full puppet-odl tests
This is currently broken pending:

* Installing Parameterized Scheduler Plugin
* Jenkins 2.0, to get JJB support for Parameterized Scheduler Plugin

Can use this to check if JJB commit we need has been released:

git tag --contains 29b82490429cc9a889b4a967a8cc8bed3558941f
2.0.0.0b1

Change-Id: I76f0d628e8194b2ac1ecaea69195f81c4885a0bd
Signed-off-by: Daniel Farrell <dfarrell@redhat.com>

--- a/jjb/packaging/packaging.yaml
+++ b/jjb/packaging/packaging.yaml
@@ -33,6 +33,10 @@
             branch: '{branch}'
             refspec: 'refs/heads/{branch}'
             artifacts: '{archive-artifacts}'
+        - string:
+            name: TEST_SUITE
+            default: 'sanity'
+            description: 'Set of tests to run, should be a rake task in puppet-opendaylight'
 
     scm:
         - integration-gerrit-scm:
@@ -48,7 +52,9 @@
         - shell: !include-raw: include-raw-test-puppet.sh
 
     triggers:
-        - timed: '@daily'
+        - parameterized-timer: |
+              @daily % TEST_SUITE=sanity
+              @weekly % TEST_SUITE=acceptance_dock
 
 - job-template:
     name: '{project-name}-build-rpm-{stream}'
