Add step in all projects merge job to trigger distribution merge
- distribution merge will be the only job uploading distros to Nexus.
- Also changing the distribution jobs name to just distribution.

Change-Id: I0bfb0b1c8fd800094d1323edd95fab8f84e80d27
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/jjb/releng-templates-java.yaml
+++ b/jjb/releng-templates-java.yaml
@@ -505,6 +505,9 @@
         - jacoco-report
         - opendaylight-infra-shiplogs:
             maven-version: 'mvn33'
+        - trigger:
+            project: 'distribution-merge-{stream}'
+            threshold: SUCCESS
 
 - job-template:
     name: '{project-name}-sonar'
