Add step in all projects merge job to trigger distribution merge
- distribution merge will be the only job uploading distros to Nexus.
- Also changing the distribution jobs name to just distribution.

Change-Id: I0bfb0b1c8fd800094d1323edd95fab8f84e80d27
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/jjb/releng-templates-java.yaml
+++ b/jjb/releng-templates-java.yaml
@@ -491,6 +491,9 @@
                 global-settings: 'odl-global-settings'
                 global-settings-type: cfp
 
+        - trigger-builds:
+            - project: 'distribution-merge-{stream}'
+
     reporters:
         - findbugs
 
