--- a/jjb/releng-templates-java.yaml
+++ b/jjb/releng-templates-java.yaml
@@ -491,6 +491,9 @@
                 global-settings: 'odl-global-settings'
                 global-settings-type: cfp
 
+        - trigger-builds:
+            - project: 'opendaylight-distribution-{stream}'
+
     reporters:
         - findbugs
 
