--- a/jjb/integration/integration-distribution-jobs.yaml
+++ b/jjb/integration/integration-distribution-jobs.yaml
@@ -4,7 +4,7 @@
     jobs:
         - '{project-name}-verify-python-{stream}'
         - 'integration-distribution-verify-{stream}'
-        - 'integration-distribution-merge-{stream}'
+        - 'opendaylight-distribution-{stream}'
         - 'integration-distribution-deploy-{stream}'
         - 'integration-distribution-offline-{stream}'
 
@@ -101,7 +101,7 @@
 
 
 - job-template:
-    name: 'integration-distribution-merge-{stream}'
+    name: 'opendaylight-distribution-{stream}'
 
     # Need to keep jobs that deploy to Nexus at end of build as Maven
     # projects. Maybe reconsider this once upstream moves deploy to a
@@ -109,7 +109,7 @@
     #     https://issues.apache.org/jira/browse/MNG-5666
 
     project-type: maven
-    node: centos7-java-builder-2c-8g
+    node: '{build-node}'
     jdk: '{jre}'
 
     properties:
@@ -121,7 +121,7 @@
             project: '{project}'
             branch: '{branch}'
             refspec: 'refs/heads/{branch}'
-            artifacts: '{archive-artifacts} **/dependency_tree.txt **/*.hprof'
+            artifacts: '{archive-artifacts} **/dependency_tree.txt **/*.hprof **/target/surefire-reports/*-output.txt'
 
     scm:
         - gerrit-trigger-scm:
@@ -133,7 +133,6 @@
             build-timeout: '{build-timeout}'
 
     triggers:
-        - timed: 'H H * * 0'
         - gerrit-trigger-patch-merged:
             server-name: '{server-name}'
             name: 'integration/distribution'
@@ -145,6 +144,8 @@
         - provide-maven-settings:
             global-settings-file: 'odl-global-settings'
             settings-file: 'integration-settings'
+        - distribute-build-url:
+            path: 'distribution-karaf/src/main/assembly'
 
     maven:
         maven-name: 'mvn33'
