--- a/jjb/integration/integration-test-jobs.yaml
+++ b/jjb/integration/integration-test-jobs.yaml
@@ -10,168 +10,25 @@
     project: integration/test
     project-name: integration-test
 
+    # CSIT Lists in releng-defaults.yaml
     stream:
         - carbon:
             branch: 'master'
             jdk: 'openjdk8'
             jre: 'openjdk8'
-            csit-list: >
-                controller-csit-3node-clustering-only-{stream},
-                controller-csit-3node-clustering-all-{stream},
-                integration-distribution-deploy-{stream},
-                integration-distribution-offline-{stream},
-                l2switch-csit-1node-switch-only-{stream},
-                l2switch-csit-1node-switch-all-{stream},
-                l2switch-csit-1node-scalability-only-{stream},
-                l2switch-csit-1node-scalability-all-{stream},
-                lispflowmapping-csit-1node-msmr-only-{stream},
-                lispflowmapping-csit-1node-msmr-all-{stream},
-                nemo-csit-1node-engine-all-{stream},
-                nemo-csit-1node-engine-only-{stream},
-                netvirt-csit-1node-openstack-mitaka-upstream-learn-{stream},
-                netvirt-csit-1node-openstack-mitaka-upstream-transparent-{stream},
-                netvirt-legacy-csit-1node-openstack-basic-all-{stream},
-                netvirt-legacy-csit-1node-openstack-basic-only-{stream},
-                netvirt-legacy-csit-1node-openstack-mitaka-upstream-{stream},
-                netvirt-legacy-csit-3node-clustering-only-{stream},
-                ocpplugin-csit-1node-get-only-{stream},
-                ocpplugin-csit-1node-get-all-{stream},
-                ocpplugin-csit-1node-scalability-only-{stream},
-                ocpplugin-csit-1node-scalability-all-{stream},
-                openflowplugin-csit-1node-flow-services-only-{stream},
-                openflowplugin-csit-1node-flow-services-all-{stream},
-                openflowplugin-csit-1node-scalability-only-{stream},
-                openflowplugin-csit-1node-cbench-performance-only-{stream},
-                openflowplugin-csit-1node-config-performance-only-{stream},
-                openflowplugin-csit-3node-clustering-only-{stream},
-                ovsdb-csit-1node-southbound-all-{stream},
-                ovsdb-csit-1node-southbound-only-{stream},
-                ovsdb-csit-3node-clustering-only-{stream},
-                packetcable-csit-1node-pcmm-only-{stream},
-                packetcable-csit-1node-pcmm-all-{stream},
-                sxp-csit-1node-basic-only-{stream},
-                sxp-csit-1node-filtering-all-{stream},
-                sxp-csit-1node-topology-only-{stream},
-                sxp-csit-1node-topology-all-{stream},
-                topoprocessing-csit-1node-topology-operations-all-{stream},
-                topoprocessing-csit-1node-topology-operations-only-{stream},
-                tsdr-csit-1node-cassandra-datastore-only-{stream},
-                tsdr-csit-1node-hbase-datastore-all-{stream},
-                tsdr-csit-1node-hbase-datastore-only-{stream},
-                tsdr-csit-1node-hsqldb-datastore-all-{stream},
-                tsdr-csit-1node-hsqldb-datastore-only-{stream},
-                usc-csit-1node-channel-only-{stream},
-                usc-csit-1node-channel-all-{stream},
-                usc-csit-1node-tcp-only-{stream},
-                usc-csit-1node-tcp-all-{stream},
-                vtn-csit-1node-manager-only-{stream},
-                vtn-csit-1node-manager-all-{stream},
-                vtn-csit-1node-coordinator-only-{stream}
+            csit-list: {csit-list-carbon}
 
         - boron:
             branch: 'stable/boron'
             jdk: 'openjdk8'
             jre: 'openjdk8'
-            csit-list: >
-                controller-csit-3node-clustering-only-{stream},
-                controller-csit-3node-clustering-all-{stream},
-                integration-distribution-deploy-{stream},
-                integration-distribution-offline-{stream},
-                l2switch-csit-1node-switch-only-{stream},
-                l2switch-csit-1node-switch-all-{stream},
-                l2switch-csit-1node-scalability-only-{stream},
-                l2switch-csit-1node-scalability-all-{stream},
-                lispflowmapping-csit-1node-msmr-only-{stream},
-                lispflowmapping-csit-1node-msmr-all-{stream},
-                nemo-csit-1node-engine-all-{stream},
-                nemo-csit-1node-engine-only-{stream},
-                netvirt-csit-1node-openstack-mitaka-upstream-learn-{stream},
-                netvirt-csit-1node-openstack-mitaka-upstream-transparent-{stream},
-                netvirt-legacy-csit-1node-openstack-basic-all-{stream},
-                netvirt-legacy-csit-1node-openstack-basic-only-{stream},
-                netvirt-legacy-csit-1node-openstack-mitaka-upstream-{stream},
-                netvirt-legacy-csit-3node-clustering-only-{stream},
-                ocpplugin-csit-1node-get-only-{stream},
-                ocpplugin-csit-1node-get-all-{stream},
-                ocpplugin-csit-1node-scalability-only-{stream},
-                ocpplugin-csit-1node-scalability-all-{stream},
-                openflowplugin-csit-1node-flow-services-only-{stream},
-                openflowplugin-csit-1node-flow-services-all-{stream},
-                openflowplugin-csit-1node-scalability-only-{stream},
-                openflowplugin-csit-1node-cbench-performance-only-{stream},
-                openflowplugin-csit-1node-config-performance-only-{stream},
-                openflowplugin-csit-3node-clustering-only-{stream},
-                ovsdb-csit-1node-southbound-all-{stream},
-                ovsdb-csit-1node-southbound-only-{stream},
-                ovsdb-csit-3node-clustering-only-{stream},
-                packetcable-csit-1node-pcmm-only-{stream},
-                packetcable-csit-1node-pcmm-all-{stream},
-                sxp-csit-1node-basic-only-{stream},
-                sxp-csit-1node-filtering-all-{stream},
-                sxp-csit-1node-topology-only-{stream},
-                sxp-csit-1node-topology-all-{stream},
-                topoprocessing-csit-1node-topology-operations-all-{stream},
-                topoprocessing-csit-1node-topology-operations-only-{stream},
-                tsdr-csit-1node-cassandra-datastore-only-{stream},
-                tsdr-csit-1node-hbase-datastore-only-{stream},
-                tsdr-csit-1node-hsqldb-datastore-only-{stream},
-                usc-csit-1node-channel-only-{stream},
-                usc-csit-1node-channel-all-{stream},
-                usc-csit-1node-tcp-only-{stream},
-                usc-csit-1node-tcp-all-{stream},
-                vtn-csit-1node-manager-only-{stream},
-                vtn-csit-1node-manager-all-{stream},
-                vtn-csit-1node-coordinator-only-{stream}
+            csit-list: {csit-list-boron}
 
         - beryllium:
             branch: 'stable/beryllium'
             jdk: 'openjdk7'
             jre: 'openjdk7'
-            csit-list: >
-                aaa-csit-1node-authn-only-{stream},
-                aaa-csit-1node-authn-all-{stream},
-                bgpcep-csit-1node-userfeatures-only-{stream},
-                bgpcep-csit-1node-userfeatures-all-{stream},
-                capwap-csit-1node-ac-only-{stream},
-                capwap-csit-1node-ac-all-{stream},
-                integration-distribution-offline-{stream},
-                integration-distribution-deploy-{stream},
-                l2switch-csit-1node-switch-only-{stream},
-                l2switch-csit-1node-scalability-only-{stream},
-                l2switch-csit-1node-scalability-all-{stream},
-                lispflowmapping-csit-1node-msmr-only-{stream},
-                lispflowmapping-csit-1node-msmr-all-{stream},
-                nemo-csit-1node-engine-all-{stream},
-                nemo-csit-1node-engine-only-{stream},
-                nic-csit-1node-basic-all-{stream},
-                nic-csit-1node-basic-only-{stream},
-                openflowplugin-csit-1node-flow-services-only-{stream},
-                openflowplugin-csit-1node-flow-services-all-{stream},
-                openflowplugin-csit-1node-scalability-only-{stream},
-                openflowplugin-csit-1node-cbench-performance-only-{stream},
-                openflowplugin-csit-1node-config-performance-only-{stream},
-                openflowplugin-csit-3node-clustering-only-{stream},
-                ovsdb-csit-1node-southbound-all-{stream},
-                ovsdb-csit-1node-southbound-only-{stream},
-                packetcable-csit-1node-pcmm-only-{stream},
-                packetcable-csit-1node-pcmm-all-{stream},
-                snmp-csit-1node-basic-only-{stream},
-                snmp-csit-1node-basic-all-{stream},
-                sxp-csit-1node-basic-only-{stream},
-                sxp-csit-1node-filtering-only-{stream},
-                sxp-csit-1node-filtering-all-{stream},
-                topoprocessing-csit-1node-topology-operations-all-{stream},
-                topoprocessing-csit-1node-topology-operations-only-{stream},
-                tsdr-csit-1node-cassandra-datastore-only-{stream},
-                tsdr-csit-1node-hbase-datastore-only-{stream},
-                tsdr-csit-1node-hsqldb-datastore-only-{stream},
-                usc-csit-1node-channel-only-{stream},
-                usc-csit-1node-channel-all-{stream},
-                usc-csit-1node-tcp-only-{stream},
-                usc-csit-1node-tcp-all-{stream},
-                vtn-csit-1node-manager-only-{stream},
-                vtn-csit-1node-manager-all-{stream},
-                vtn-csit-1node-coordinator-only-{stream}
+            csit-list: {csit-list-beryllium}
 
     # tools system image
     tools_system_image: Ubuntu 14.04 - mininet-ovs-2.5 - 20170117-0004
