Add insert-csit-tests script
Part of refactor of distribution jobs
workflow. This auto updates
csit to run in integration-test-jobs.yaml

Change-Id: Ib989ce0cc1b206596c8b3cc4f069e5c714309f7f
Signed-off-by: Marcus G K Williams <marcus.williams@intel.com>

--- a/jjb/integration/integration-macros.yaml
+++ b/jjb/integration/integration-macros.yaml
@@ -410,7 +410,7 @@
                 - include-raw-integration-deploy-openstack-run-test.sh
 
 # Macro: integration-list-jobs
-# Operation: queries Jenkins jobs from jenkins.opendaylight.org and 
+# Operation: queries Jenkins jobs from jenkins.opendaylight.org and
 #   writes a list of the jobs corresponding to the search terms to a file.
 # Used by: builder-merge job template
 #
@@ -426,6 +426,25 @@
         - shell:
             !include-raw:
                 - include-raw-integration-list-jobs.sh
+
+# Macro: integration-replace-block-text
+# Operation: using starting and ending regex to
+# replace a block of text in a file with the text in
+# another file. Regex should be basic and work with sed
+# Used by: builder-merge job template
+#
+# This script requires the following JJB variables to be passed in:
+#   {starting-regex}
+#   {ending-regex}
+#   {file-with-changes-to-insert}
+#   {file-to-change}
+
+- builder:
+    name: integration-replace-block-text
+    builders:
+        - shell:
+            !include-raw:
+                - include-raw-integration-replace-block-text.sh
 
 ##############
 # Publishers #
