Archiving dependencies.log
this is to make it easy to grab from a standard jenkins URL (e.g. lastSuccessfulArtifacts)
so that other tools can access it more easily

Change-Id: Id05a75f86788ddfd62098d013e841eec40d439a4
Signed-off-by: Jamo Luhrsen <jluhrsen@redhat.com>

--- a/jjb/autorelease/autorelease-projects.yaml
+++ b/jjb/autorelease/autorelease-projects.yaml
@@ -24,6 +24,10 @@
     project: 'releng/autorelease'
     archive-artifacts: '**/*.prop **/*.log **/patches/*.bundle **/patches/*.patch all-bundles.tar.gz'
 
+    publishers:
+      - archive:
+          artifacts: 'dependecies.log'
+
 ###
 # TODO: Remove this job once guava21 testing is complete
 ###
