--- a/jjb/autorelease/autorelease-macros.yaml
+++ b/jjb/autorelease/autorelease-macros.yaml
@@ -139,3 +139,11 @@
         - shell: |
             ./scripts/fix-relativepaths.sh
 
+- builder:
+    # include-raw-autorelease-notify-build-failure.sh searches console log for
+    # failures and emails the status to the release mailing list.
+    name: opendaylight-infra-notify-status
+    builders:
+        - shell:
+            !include-raw:
+                - include-raw-autorelease-notify-build-failure.sh
