--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -88,6 +88,7 @@
             global-settings: 'odl-global-settings'
         - autorelease-maven-sources-post-process
         - autorelease-sys-stats
+        - opendaylight-infra-notify-status
         - shell: |
             mkdir -p archives/
             cp *.log *.prop $_
