Notify projects automatically of autorelease build failure
Work-in-progress...

Change-Id: I0252d18551c86f08a3f95d87cacc7722ec621082
Also-by: Anil Belur <abelur@linuxfoundation.org>
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -105,6 +105,7 @@
               fail-on-missing: true
         - opendaylight-infra-shiplogs:
             maven-version: 'mvn33'
+        - opendaylight-infra-notify-status
 
 - job-template:
     name: 'autorelease-project-report-{stream}'
