Notify projects automatically of autorelease build failure
Work-in-progress...

Change-Id: I0252d18551c86f08a3f95d87cacc7722ec621082
Also-by: Anil Belur <abelur@linuxfoundation.org>
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/autorelease/autorelease-macros.yaml
+++ b/jjb/autorelease/autorelease-macros.yaml
@@ -139,3 +139,12 @@
         - shell: |
             ./scripts/fix-relativepaths.sh
 
+- publisher:
+    # opendaylight-notify-build-failure.sh searches console log for failures
+    # and emails the status to the release mailing list.
+    name: opendaylight-infra-notify-status
+    publishers:
+        - postbuildscript:
+            builders:
+                - shell: !include-raw: autorelease-notify-build-failure.sh
+            script-only-if-succeeded: False
