Revert gerrit-patch macro back to git review
Use git review for pushing gerrit
patches from jenkins. This was
changed due to absence of
git review on some nodes. It is
changed back with a note warning
that not all jenkins nodes have
git review installed.

Change-Id: I43e37b909d26b4940a24132713b5145aa60ea628
Signed-off-by: Marcus G K Williams <marcus.williams@intel.com>

--- a/jjb/releng-macros.yaml
+++ b/jjb/releng-macros.yaml
@@ -329,7 +329,8 @@
     # This script requires the following JJB variables to be passed in:
     #     {project}       Gerrit project-name
     #     {gerrit-topic}  Gerrit topic, please make a unique topic.
-    #     {gerrit-commit-message}  Commit message to assign to commit.
+    #     {gerrit-commit-message} Commit message to assign to commit.
+    # NOTE: Requires git review to be installed on node.
     builders:
         - shell: !include-raw: opendaylight-infra-push-gerrit-patch.sh
 
