Add job to update auto update CSIT Tests
This job adds auto update funtionality
for csit tests run by integration-distribution-test
jobs.

- Adds a variable for csit blacklist
- Add job named builder-update-csit-tests
- Adds explanitory comments to each section
- Fixed issue with default variable values
  in include-raw-integration-list-jobs.sh

Change-Id: I7363c91949e957281feda1976ac49aa976fae611
Signed-off-by: Marcus G K Williams <marcus.williams@intel.com>

--- a/jjb/releng-defaults.yaml
+++ b/jjb/releng-defaults.yaml
@@ -110,7 +110,11 @@
     10-inclusion-flag: 'off'
     10-exclude-value: ''
 
-    # CSIT Test Lists
+    ### CSIT Test List Variables
+    # Space seperated strings to exclude from CSIT lists
+    csit-list-blacklist: 'longevity gate'
+    # Auto Generated CSIT job lists used
+    # in integration-distribution-test jobs
     csit-list-carbon: >
         controller-csit-3node-clustering-only-carbon,
         controller-csit-3node-clustering-all-carbon,
